# toponymy

./: pyproject.toml
toponymy/: llm_wrappers.py  topic_naming.py
toponymy/tests/: test_llm_wrappers.py
